# stupidwebserver

./: Cargo.toml  build.sh
src/: main.rs  papijoy.rs
