[package]
name = "stupidwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
local-ip-address = "0.6.1"
tokio = { version = "1.37.0", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0
