[package]
name = "stupidwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
ctrlc = "3.4.4"
indicatif = "0.17.8"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libc = "0.2.153"
local-ip-address = "0.6.1"
termion = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0
