[package]
name = "stupidwebserver"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
crossterm = "0.27.0"
ctrlc = "3.4.4"
jemalloc-ctl = "0.5.4"
jemallocator = "0.5.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
local-ip-address = "0.6.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 0
